--- a/wp-content/themes/mwoodtheme/style.css
+++ b/wp-content/themes/mwoodtheme/style.css
@@ -6030,22 +6030,65 @@ BACKGOURND-COLOR
   width: 100%;
 }
 
-/* line 47, sass/style.scss */
+/* line 39, sass/style.scss */
 .woocommerce-active .site-header .site-branding {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: auto;
+  margin: 0;
+  color: white !important;
 }
 
-/* line 55, sass/style.scss */
+/* line 49, sass/style.scss */
 .wc-block-grid__product {
   display: flex;
   flex-direction: column;
 }
-/* line 58, sass/style.scss */
+/* line 53, sass/style.scss */
 .wc-block-grid__product .wp-block-button {
   display: flex;
   margin-top: auto;
+}
+
+/* line 59, sass/style.scss */
+.site-header {
+  background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
+  height: 100vh;
+  position: relative;
+}
+/* line 63, sass/style.scss */
+.site-header p, .site-header a, .site-header h1, .site-header h2 {
+  color: white !important;
+}
+/* line 66, sass/style.scss */
+.site-header .sub-menu {
+  background: #020024 !important;
+  background: linear-gradient(180deg, rgba(2, 0, 36, 0.7) 0%, rgba(0, 212, 255, 0) 100%) !important;
+}
+
+/* line 71, sass/style.scss */
+.overlay_black {
+  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+/* line 81, sass/style.scss */
+.main-navigation {
+  width: auto !important;
+  margin: 0 !important;
+  margin-left: auto !important;
+}
+
+/* line 86, sass/style.scss */
+.site-search {
+  margin: 0;
+  align-self: center;
 }
