--- a/wp-content/themes/mwoodtheme/sass/style.scss
+++ b/wp-content/themes/mwoodtheme/sass/style.scss
@@ -34,6 +34,7 @@ Version: 0.1.0
 @import 'utils/cards/cards';
 // Manage app recurring containers
 @import 'utils/containers/containers';
+@import 'utils/fonts';
 
 
 .woocommerce-active .site-header .site-branding {
