--- a/wp-content/themes/mwoodtheme/style.css
+++ b/wp-content/themes/mwoodtheme/style.css
@@ -11,6 +11,7 @@ Version: 0.1.0
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css?family=BioRhyme:300,400,700|Cabin:400,400i,500,500i,600,600i,700,700i&display=swap");
 /* line 6, sass/utils/reset.scss */
 * {
   box-sizing: border-box;
@@ -77,31 +78,29 @@ table {
 /* BASE SETTINGS */
 /* line 3, sass/utils/main.scss */
 :root {
-  font-family: 'Roboto', sans-serif !important;
   box-sizing: border-box !important;
   font-size: 62.5%;
 }
 
-/* line 9, sass/utils/main.scss */
+/* line 8, sass/utils/main.scss */
 * {
   line-height: 1.2 !important;
 }
 
-/* line 13, sass/utils/main.scss */
+/* line 12, sass/utils/main.scss */
 html, body {
-  font-family: 'Roboto', sans-serif !important;
   height: 100%;
   font-size: 1.6rem;
 }
 
-/* line 20, sass/utils/main.scss */
+/* line 17, sass/utils/main.scss */
 a {
   color: unset;
-  text-decoration: none;
+  text-decoration: none !important;
 }
-/* line 24, sass/utils/main.scss */
+/* line 21, sass/utils/main.scss */
 a:hover, a:focus, a:active {
-  text-decoration: unset;
+  text-decoration: none;
   font-weight: unset;
 }
 
@@ -6030,7 +6029,17 @@ BACKGOURND-COLOR
   width: 100%;
 }
 
-/* line 39, sass/style.scss */
+/* line 3, sass/utils/fonts.scss */
+h1, h2, h3, h4, h4 {
+  font-family: 'BioRhyme', serif;
+}
+
+/* line 7, sass/utils/fonts.scss */
+p, a, span {
+  font-family: 'Cabin', sans-serif;
+}
+
+/* line 40, sass/style.scss */
 .woocommerce-active .site-header .site-branding {
   display: flex;
   flex-direction: column;
@@ -6041,34 +6050,34 @@ BACKGOURND-COLOR
   color: white !important;
 }
 
-/* line 49, sass/style.scss */
+/* line 50, sass/style.scss */
 .wc-block-grid__product {
   display: flex;
   flex-direction: column;
 }
-/* line 53, sass/style.scss */
+/* line 54, sass/style.scss */
 .wc-block-grid__product .wp-block-button {
   display: flex;
   margin-top: auto;
 }
 
-/* line 59, sass/style.scss */
+/* line 60, sass/style.scss */
 .site-header {
   background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
   height: 100vh;
   position: relative;
 }
-/* line 63, sass/style.scss */
+/* line 64, sass/style.scss */
 .site-header p, .site-header a, .site-header h1, .site-header h2 {
   color: white !important;
 }
-/* line 66, sass/style.scss */
+/* line 67, sass/style.scss */
 .site-header .sub-menu {
   background: #020024 !important;
   background: linear-gradient(180deg, rgba(2, 0, 36, 0.7) 0%, rgba(0, 212, 255, 0) 100%) !important;
 }
 
-/* line 71, sass/style.scss */
+/* line 72, sass/style.scss */
 .overlay_black {
   position: absolute;
   background-color: black;
@@ -6080,14 +6089,14 @@ BACKGOURND-COLOR
   z-index: -1;
 }
 
-/* line 81, sass/style.scss */
+/* line 82, sass/style.scss */
 .main-navigation {
   width: auto !important;
   margin: 0 !important;
   margin-left: auto !important;
 }
 
-/* line 86, sass/style.scss */
+/* line 87, sass/style.scss */
 .site-search {
   margin: 0;
   align-self: center;
