--- a/wp-content/themes/mwoodtheme/style.css
+++ b/wp-content/themes/mwoodtheme/style.css
@@ -6097,64 +6097,6 @@ p, a, span {
 }
 
 /* line 61, sass/style.scss */
-.site-header {
-  background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
-  height: 100vh;
-  position: relative;
-}
-/* line 65, sass/style.scss */
-.site-header p, .site-header a, .site-header h1, .site-header h2 {
-  color: white !important;
-}
-/* line 68, sass/style.scss */
-.site-header .sub-menu {
-  background: rgba(0, 0, 0, 0.5) !important;
-}
-
-/* line 72, sass/style.scss */
-.site-header-cart .widget_shopping_cart {
-  background: rgba(0, 0, 0, 0.5) !important;
-}
-/* line 75, sass/style.scss */
-.site-header-cart .widget_shopping_cart .total {
-  background: transparent;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-  border-top: 1px solid rgba(255, 255, 255, 0.05);
-}
-/* line 81, sass/style.scss */
-.site-header-cart .widget_shopping_cart .buttons {
-  background: transparent;
-}
-/* line 85, sass/style.scss */
-.site-header-cart .widget_shopping_cart .product_list_widget li a.remove::before {
-  color: white;
-}
-/* line 89, sass/style.scss */
-.site-header-cart .widget_shopping_cart a.button {
-  background-color: #26525A;
-  color: white;
-  font-weight: unset;
-}
-/* line 95, sass/style.scss */
-.site-header-cart .widget_shopping_cart a.button.checkout.wc-forward {
-  background-color: #333333;
-}
-/* line 99, sass/style.scss */
-.site-header-cart .widget_shopping_cart a.button.checkout.wc-forward:hover {
-  background-color: #1b1b1b;
-}
-/* line 103, sass/style.scss */
-.site-header-cart .widget_shopping_cart a.button:hover {
-  background-color: #1c3b41;
-  color: white;
-}
-
-/* line 111, sass/style.scss */
-.site-header .product_list_widget li .quantity {
-  color: #e9e9e9;
-}
-
-/* line 114, sass/style.scss */
 .overlay_black {
   position: absolute;
   background-color: black;
@@ -6166,39 +6108,178 @@ p, a, span {
   z-index: -1;
 }
 
-/* line 124, sass/style.scss */
+/* line 72, sass/style.scss */
 .main-navigation {
   width: auto !important;
   margin: 0 !important;
   margin-left: auto !important;
 }
 
-/* line 129, sass/style.scss */
+/* line 78, sass/style.scss */
 .site-search {
   margin: 0;
   align-self: center;
 }
 
+/* line 83, sass/style.scss */
+.fixed_header {
+  position: fixed;
+  top: 0;
+  height: 50px;
+  width: 100%;
+  background-color: red;
+  z-index: 1000;
+}
+
+/* line 92, sass/style.scss */
+.wrapper-cart-fixed {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+/* line 97, sass/style.scss */
+.wrapper-cart-fixed .site-header-cart.menu.--fixed {
+  position: fixed;
+  margin-left: -200px;
+  max-width: 230px;
+  z-index: 10;
+  top: -0px;
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: all 0.3s ease-in-out;
+}
+/* line 108, sass/style.scss */
+.wrapper-cart-fixed .site-header-cart.menu.--fixed.--visible {
+  opacity: 1;
+  transform: unset;
+  transition: all 0.3s ease-in-out;
+}
+
+/* line 119, sass/style.scss */
+.site-header {
+  background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
+  height: 100vh;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/* line 126, sass/style.scss */
+.site-header p, .site-header a, .site-header h1, .site-header h2 {
+  color: white !important;
+}
+/* line 130, sass/style.scss */
+.site-header .sub-menu {
+  background: rgba(0, 0, 0, 0.5) !important;
+}
+
 /* line 135, sass/style.scss */
+.site-header-cart .widget_shopping_cart {
+  background: rgba(0, 0, 0, 0.5) !important;
+}
+/* line 138, sass/style.scss */
+.site-header-cart .widget_shopping_cart .total {
+  background: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+/* line 144, sass/style.scss */
+.site-header-cart .widget_shopping_cart .buttons {
+  background: transparent;
+}
+/* line 148, sass/style.scss */
+.site-header-cart .widget_shopping_cart .product_list_widget li a.remove::before {
+  color: white;
+}
+/* line 152, sass/style.scss */
+.site-header-cart .widget_shopping_cart a.button {
+  background-color: #26525A;
+  color: white;
+  font-weight: unset;
+}
+/* line 158, sass/style.scss */
+.site-header-cart .widget_shopping_cart a.button.checkout.wc-forward {
+  background-color: #333333;
+}
+/* line 162, sass/style.scss */
+.site-header-cart .widget_shopping_cart a.button.checkout.wc-forward:hover {
+  background-color: #1b1b1b;
+}
+/* line 166, sass/style.scss */
+.site-header-cart .widget_shopping_cart a.button:hover {
+  background-color: #1c3b41;
+  color: white;
+}
+
+/* line 174, sass/style.scss */
+.site-header .product_list_widget li .quantity {
+  color: #e9e9e9;
+}
+
+/* line 178, sass/style.scss */
+.overlay_black {
+  position: absolute;
+  background-color: black;
+  opacity: 0.5;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+
+/* line 189, sass/style.scss */
+.main-navigation {
+  width: auto !important;
+  margin: 0 !important;
+  margin-left: auto !important;
+}
+
+/* line 195, sass/style.scss */
+.site-search {
+  margin: 0;
+  align-self: center;
+}
+
+/* line 201, sass/style.scss */
 .storefront-breadcrumb {
   background-color: #E5E5E5;
   color: #070707;
 }
-/* line 138, sass/style.scss */
+/* line 205, sass/style.scss */
 .storefront-breadcrumb a {
   color: #070707;
 }
-/* line 141, sass/style.scss */
+/* line 209, sass/style.scss */
 .storefront-breadcrumb span.breadcrumb-separator::after {
   opacity: 1;
   color: #070707;
 }
 
-/* line 150, sass/style.scss */
+/* line 218, sass/style.scss */
 footer .footer-widgets .footer-widget-2 p {
   padding: 20px 0;
 }
-/* line 153, sass/style.scss */
+/* line 221, sass/style.scss */
 footer .footer-widgets .footer-widget-2 p i.fas {
   width: 25px;
+}
+
+/* line 226, sass/style.scss */
+.header-fixed {
+  position: fixed;
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  top: 0;
+  z-index: 1;
+  background-color: #00000052;
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: all 0.3s ease-in-out;
+}
+/* line 239, sass/style.scss */
+.header-fixed.--visible {
+  opacity: 1;
+  transform: unset;
+  transition: all 0.3s ease-in-out;
 }
