--- a/wp-content/themes/mwoodtheme/style.css
+++ b/wp-content/themes/mwoodtheme/style.css
@@ -104,6 +104,141 @@ a:hover, a:focus, a:active {
   font-weight: unset;
 }
 
+/* line 28, sass/utils/main.scss */
+.mt-0 {
+  margin-top: 0 !important;
+}
+
+/* line 32, sass/utils/main.scss */
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
+/* line 36, sass/utils/main.scss */
+.mt-1 {
+  margin-top: 1rem;
+}
+
+/* line 40, sass/utils/main.scss */
+.mt-1_5 {
+  margin-top: 1.5rem;
+}
+
+/* line 44, sass/utils/main.scss */
+.mt-2 {
+  margin-top: 2rem;
+}
+
+/* line 48, sass/utils/main.scss */
+.mt-2_5 {
+  margin-top: 2.5rem;
+}
+
+/* line 52, sass/utils/main.scss */
+.mt-3 {
+  margin-top: 3rem;
+}
+
+/* line 56, sass/utils/main.scss */
+.mt-3_5 {
+  margin-top: 3.5rem;
+}
+
+/* line 60, sass/utils/main.scss */
+.mt-6 {
+  margin-top: 6rem;
+}
+
+/* line 64, sass/utils/main.scss */
+.mt-5 {
+  margin-top: 5px;
+}
+
+/* line 68, sass/utils/main.scss */
+.mt-10 {
+  margin-top: 10px;
+}
+
+/* line 72, sass/utils/main.scss */
+.mt-15 {
+  margin-top: 15px;
+}
+
+/* line 76, sass/utils/main.scss */
+.mt-20 {
+  margin-top: 20px;
+}
+
+/* line 80, sass/utils/main.scss */
+.mt-25 {
+  margin-top: 25px;
+}
+
+/* line 84, sass/utils/main.scss */
+.mt-30 {
+  margin-top: 30px;
+}
+
+/* line 88, sass/utils/main.scss */
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+/* line 92, sass/utils/main.scss */
+.mb-1_5 {
+  margin-bottom: 1.5rem;
+}
+
+/* line 96, sass/utils/main.scss */
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+/* line 100, sass/utils/main.scss */
+.mb-2_5 {
+  margin-bottom: 2.5rem;
+}
+
+/* line 104, sass/utils/main.scss */
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+/* line 108, sass/utils/main.scss */
+.mb-3_5 {
+  margin-bottom: 3.5rem;
+}
+
+/* line 112, sass/utils/main.scss */
+.mb-5 {
+  margin-bottom: 5px;
+}
+
+/* line 116, sass/utils/main.scss */
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+/* line 120, sass/utils/main.scss */
+.mb-15 {
+  margin-bottom: 15px;
+}
+
+/* line 124, sass/utils/main.scss */
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+/* line 128, sass/utils/main.scss */
+.mb-25 {
+  margin-bottom: 25px;
+}
+
+/* line 132, sass/utils/main.scss */
+.mb-30 {
+  margin-bottom: 30px;
+}
+
 /*
 DOCUMENTATION
 
@@ -5986,6 +6121,13 @@ BACKGOURND-COLOR
 .woocommerce .add-request-quote-button.button:hover {
   background-color: #535353;
   color: #f9f9f9;
+}
+
+/* line 197, sass/utils/buttons/_buttons.scss */
+.btn-white .wp-block-button__link {
+  background-color: transparent !important;
+  border: solid 1px #F9F9F9 !important;
+  border-radius: 5px !important;
 }
 
 /* line 1, sass/utils/containers/_containers.scss */
