--- a/wp-content/themes/mwoodtheme/sass/utils/fonts.scss
+++ b/wp-content/themes/mwoodtheme/sass/utils/fonts.scss
@@ -18,6 +18,14 @@ h3 {
     margin-bottom: 2rem;
 }
 
+.woocommerce-products-header__title.page-title {
+    margin-bottom: 4rem;
+}
+
+.woocommerce-Price-amount.amount {
+    color: #;
+}
+
 ul.products li.product h2, ul.products li.product h3, ul.products li.product .woocommerce-loop-product__title, ul.products li.product .wc-block-grid__product-title, ul.products .wc-block-grid__product h2, ul.products .wc-block-grid__product h3, ul.products .wc-block-grid__product .woocommerce-loop-product__title, ul.products .wc-block-grid__product .wc-block-grid__product-title, .wc-block-grid__products li.product h2, .wc-block-grid__products li.product h3, .wc-block-grid__products li.product .woocommerce-loop-product__title, .wc-block-grid__products li.product .wc-block-grid__product-title, .wc-block-grid__products .wc-block-grid__product h2, .wc-block-grid__products .wc-block-grid__product h3, .wc-block-grid__products .wc-block-grid__product .woocommerce-loop-product__title, .wc-block-grid__products .wc-block-grid__product .wc-block-grid__product-title {
     font-size: 2rem;
 }
