--- a/wp-content/themes/mwoodtheme/sass/style.scss
+++ b/wp-content/themes/mwoodtheme/sass/style.scss
@@ -222,6 +222,13 @@ footer {
       width: 25px;
     }
   }
+
+  .footer-widgets {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3) !important;
+  }
+}
+.site-footer {
+  padding: 0 !important;
 }
 .header-fixed{
   position: fixed;
