--- a/wp-content/themes/mwoodtheme/utils/main.css
+++ b/wp-content/themes/mwoodtheme/utils/main.css
@@ -168,9 +168,46 @@ a:hover, a:focus, a:active {
 }
 
 /* line 143, ../sass/utils/main.scss */
+header#masthead {
+  background-color: #26525a;
+  color: #f9f9f9;
+}
+
+/* line 148, ../sass/utils/main.scss */
+.main-navigation ul.menu ul a:hover, .main-navigation ul.menu ul li:hover > a, .main-navigation ul.menu ul li.focus, .main-navigation ul.nav-menu ul a:hover, .main-navigation ul.nav-menu ul li:hover > a, .main-navigation ul.nav-menu ul li.focus {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* line 153, ../sass/utils/main.scss */
 .comment-form-comment {
   margin-top: 2rem !important;
   margin-bottom: 2rem !important;
+}
+
+/* line 158, ../sass/utils/main.scss */
+.woocommerce form {
+  max-width: none !important;
+}
+
+/* line 162, ../sass/utils/main.scss */
+div#customer_details {
+  width: 100%;
+  float: none;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  /* line 169, ../sass/utils/main.scss */
+  #order_review_heading, #order_review {
+    width: auto !important;
+    float: none !important;
+    margin-right: 0 !important;
+    clear: right !important;
+  }
+}
+/* line 177, ../sass/utils/main.scss */
+.yith-ywraq-add-to-quote.add-to-quote-256 {
+  margin-top: 15px;
 }
 
 /*
