--- a/wp-content/themes/mwoodtheme/sass/style.scss
+++ b/wp-content/themes/mwoodtheme/sass/style.scss
@@ -117,18 +117,13 @@ Version: 0.1.0
 
 
 .site-header {
-  background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
-  height: 100vh;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
 
   p, a, h1, h2 {
     color: white !important;
   }
 
   .sub-menu {
-    background: rgba(0, 0, 0, 0.5) !important;
+    background-color: #26525a !important;
   }
 }
 
@@ -237,7 +232,7 @@ footer {
   box-sizing: border-box;
   top: 0;
   z-index: 1;
-  background-color: #00000052;
+  background-color: #26525aeb;
   opacity: 0;
   transform: translateY(-50px);
   transition: all 0.3s ease-in-out;
