--- a/wp-content/themes/mwoodtheme/style.css
+++ b/wp-content/themes/mwoodtheme/style.css
@@ -245,9 +245,46 @@ a:hover, a:focus, a:active {
 }
 
 /* line 143, sass/utils/main.scss */
+header#masthead {
+  background-color: #26525a;
+  color: #f9f9f9;
+}
+
+/* line 148, sass/utils/main.scss */
+.main-navigation ul.menu ul a:hover, .main-navigation ul.menu ul li:hover > a, .main-navigation ul.menu ul li.focus, .main-navigation ul.nav-menu ul a:hover, .main-navigation ul.nav-menu ul li:hover > a, .main-navigation ul.nav-menu ul li.focus {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* line 153, sass/utils/main.scss */
 .comment-form-comment {
   margin-top: 2rem !important;
   margin-bottom: 2rem !important;
+}
+
+/* line 158, sass/utils/main.scss */
+.woocommerce form {
+  max-width: none !important;
+}
+
+/* line 162, sass/utils/main.scss */
+div#customer_details {
+  width: 100%;
+  float: none;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  /* line 169, sass/utils/main.scss */
+  #order_review_heading, #order_review {
+    width: auto !important;
+    float: none !important;
+    margin-right: 0 !important;
+    clear: right !important;
+  }
+}
+/* line 177, sass/utils/main.scss */
+.yith-ywraq-add-to-quote.add-to-quote-256 {
+  margin-top: 15px;
 }
 
 /*
@@ -6411,67 +6448,59 @@ p, a, span, body, button, input, textarea {
   transition: all 0.3s ease-in-out;
 }
 
-/* line 119, sass/style.scss */
-.site-header {
-  background-image: url(https://images.unsplash.com/photo-1463082459669-fd1ca1692fea?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
-  height: 100vh;
-  position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-/* line 126, sass/style.scss */
+/* line 121, sass/style.scss */
 .site-header p, .site-header a, .site-header h1, .site-header h2 {
   color: white !important;
 }
-/* line 130, sass/style.scss */
+/* line 125, sass/style.scss */
 .site-header .sub-menu {
-  background: rgba(0, 0, 0, 0.5) !important;
+  background-color: #26525a !important;
 }
 
-/* line 135, sass/style.scss */
+/* line 130, sass/style.scss */
 .site-header-cart .widget_shopping_cart {
   background: rgba(0, 0, 0, 0.5) !important;
 }
-/* line 138, sass/style.scss */
+/* line 133, sass/style.scss */
 .site-header-cart .widget_shopping_cart .total {
   background: transparent;
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
   border-top: 1px solid rgba(255, 255, 255, 0.05);
 }
-/* line 144, sass/style.scss */
+/* line 139, sass/style.scss */
 .site-header-cart .widget_shopping_cart .buttons {
   background: transparent;
 }
-/* line 148, sass/style.scss */
+/* line 143, sass/style.scss */
 .site-header-cart .widget_shopping_cart .product_list_widget li a.remove::before {
   color: white;
 }
-/* line 152, sass/style.scss */
+/* line 147, sass/style.scss */
 .site-header-cart .widget_shopping_cart a.button {
   background-color: #26525A;
   color: white;
   font-weight: unset;
 }
-/* line 158, sass/style.scss */
+/* line 153, sass/style.scss */
 .site-header-cart .widget_shopping_cart a.button.checkout.wc-forward {
   background-color: #333333;
 }
-/* line 162, sass/style.scss */
+/* line 157, sass/style.scss */
 .site-header-cart .widget_shopping_cart a.button.checkout.wc-forward:hover {
   background-color: #1b1b1b;
 }
-/* line 166, sass/style.scss */
+/* line 161, sass/style.scss */
 .site-header-cart .widget_shopping_cart a.button:hover {
   background-color: #1c3b41;
   color: white;
 }
 
-/* line 174, sass/style.scss */
+/* line 169, sass/style.scss */
 .site-header .product_list_widget li .quantity {
   color: #e9e9e9;
 }
 
-/* line 178, sass/style.scss */
+/* line 173, sass/style.scss */
 .overlay_black {
   position: absolute;
   background-color: black;
@@ -6483,53 +6512,53 @@ p, a, span, body, button, input, textarea {
   z-index: -1;
 }
 
-/* line 189, sass/style.scss */
+/* line 184, sass/style.scss */
 .main-navigation {
   width: auto !important;
   margin: 0 !important;
   margin-left: auto !important;
 }
 
-/* line 195, sass/style.scss */
+/* line 190, sass/style.scss */
 .site-search {
   margin: 0;
   align-self: center;
 }
 
-/* line 201, sass/style.scss */
+/* line 196, sass/style.scss */
 .storefront-breadcrumb {
   background-color: #E5E5E5;
   color: #070707;
 }
-/* line 205, sass/style.scss */
+/* line 200, sass/style.scss */
 .storefront-breadcrumb a {
   color: #070707;
 }
-/* line 209, sass/style.scss */
+/* line 204, sass/style.scss */
 .storefront-breadcrumb span.breadcrumb-separator::after {
   opacity: 1;
   color: #070707;
 }
 
-/* line 218, sass/style.scss */
+/* line 213, sass/style.scss */
 footer .footer-widgets .footer-widget-2 p {
   padding: 20px 0;
 }
-/* line 221, sass/style.scss */
+/* line 216, sass/style.scss */
 footer .footer-widgets .footer-widget-2 p i.fas {
   width: 25px;
 }
-/* line 226, sass/style.scss */
+/* line 221, sass/style.scss */
 footer .footer-widgets {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3) !important;
 }
 
-/* line 230, sass/style.scss */
+/* line 225, sass/style.scss */
 .site-footer {
   padding: 0 !important;
 }
 
-/* line 233, sass/style.scss */
+/* line 228, sass/style.scss */
 .header-fixed {
   position: fixed;
   max-width: 100%;
@@ -6537,12 +6566,12 @@ footer .footer-widgets {
   box-sizing: border-box;
   top: 0;
   z-index: 1;
-  background-color: #00000052;
+  background-color: #26525aeb;
   opacity: 0;
   transform: translateY(-50px);
   transition: all 0.3s ease-in-out;
 }
-/* line 246, sass/style.scss */
+/* line 241, sass/style.scss */
 .header-fixed.--visible {
   opacity: 1;
   transform: unset;
