--- a/wp-content/themes/mwoodtheme/utils/main.css
+++ b/wp-content/themes/mwoodtheme/utils/main.css
@@ -210,6 +210,125 @@ div#customer_details {
   margin-top: 15px;
 }
 
+/* line 181, ../sass/utils/main.scss */
+.ol-info-window-plain {
+  color: black;
+}
+
+/* line 184, ../sass/utils/main.scss */
+.caldera-grid .btn-default {
+  color: #fff;
+  background-color: #26525A;
+  border: none;
+  padding: 8px 22px;
+}
+
+/* menu en une 1 ligne (Lucas) */
+/* line 192, ../sass/utils/main.scss */
+#site-header-cart > .current-menu-item > .cart-contents, #site-header-cart > li:nth-of-type(1) > .cart-contents {
+  display: none;
+}
+
+/* line 196, ../sass/utils/main.scss */
+.woocommerce form {
+  max-width: 512px;
+  width: 100%;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+}
+
+/* line 203, ../sass/utils/main.scss */
+.woocommerce label {
+  margin: 25px 0px 5px 0px;
+}
+
+/* line 207, ../sass/utils/main.scss */
+.woocommerce h2 {
+  text-align: center;
+}
+
+/* line 210, ../sass/utils/main.scss */
+.woocommerce-form-login__submit {
+  margin: 25px auto !important;
+  display: block;
+  padding: 12px 35px;
+}
+
+/* line 215, ../sass/utils/main.scss */
+p.woocommerce-LostPassword.lost_password {
+  text-align: center;
+}
+
+/* line 218, ../sass/utils/main.scss */
+.woocommerce-Button {
+  margin-top: 15px;
+}
+
+/* line 221, ../sass/utils/main.scss */
+.woocommerce-button {
+  margin: 15px;
+}
+
+/* line 225, ../sass/utils/main.scss */
+.is-menu path {
+  fill: #F9F9F9;
+}
+
+/* line 229, ../sass/utils/main.scss */
+header#masthead {
+  padding-top: 0 !important;
+  margin-bottom: 0;
+  border-bottom: 0;
+  padding-bottom: 0;
+}
+
+/* line 236, ../sass/utils/main.scss */
+div#header-fixed {
+  margin-left: 0;
+}
+
+/* line 240, ../sass/utils/main.scss */
+.woocommerce-active .site-header .site-branding {
+  align-self: center;
+}
+
+/* line 244, ../sass/utils/main.scss */
+.main-navigation ul li, .secondary-navigation ul li {
+  position: relative;
+  display: inline-block;
+  top: -3px;
+  bottom: 0;
+}
+
+/* line 251, ../sass/utils/main.scss */
+li.astm-search-menu.is-menu.popup {
+  top: 0;
+}
+
+/* line 255, ../sass/utils/main.scss */
+input.is-search-input {
+  width: 100%;
+}
+
+/* line 259, ../sass/utils/main.scss */
+button.menu-toggle {
+  background-color: transparent;
+  border: none;
+  color: white;
+}
+
+/* line 265, ../sass/utils/main.scss */
+button.menu-toggle:after, button.menu-toggle:before, button.menu-toggle span:before {
+  background-color: white !important;
+}
+
+/* line 269, ../sass/utils/main.scss */
+button.menu-toggle {
+  background-color: transparent !important;
+  color: white !important;
+}
+
 /*
 DOCUMENTATION
 
